WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269839
Source/WebKit/Platform/cocoa/ExtensionCapabilityGrant.mm:40:25: error: instance method '-isValid' not found
https://bugs.webkit.org/show_bug.cgi?id=269839
Summary
Source/WebKit/Platform/cocoa/ExtensionCapabilityGrant.mm:40:25: error: instan...
Jean-Yves Avenard [:jya]
Reported
2024-02-21 03:36:16 PST
Compilation failure on iOS 17.4 SDK ``` In file included from /Users/jyavenard/Work/webkit/OpenSource/WebKitBuild/Release-iphonesimulator/DerivedSources/WebKit/unified-sources/UnifiedSource7-mm.mm:1: /Users/jyavenard/Work/webkit/OpenSource/Source/WebKit/Platform/cocoa/ExtensionCapabilityGrant.mm:40:25: error: instance method '-isValid' not found (return type defaults to 'id') [-Werror,-Wobjc-method-access] if (![platformGrant isValid]) ^~~~~~~ In file included from /Users/jyavenard/Work/webkit/OpenSource/WebKitBuild/Release-iphonesimulator/DerivedSources/WebKit/unified-sources/UnifiedSource7-mm.mm:1: In file included from /Users/jyavenard/Work/webkit/OpenSource/Source/WebKit/WebKit2Prefix.h:37: ``` regressed by
bug 268644
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-21 03:37:20 PST
<
rdar://problem/123369227
>
Jean-Yves Avenard [:jya]
Comment 2
2024-02-21 03:38:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24870
EWS
Comment 3
2024-02-21 04:26:52 PST
Committed
275092@main
(8b4edddf2455): <
https://commits.webkit.org/275092@main
> Reviewed commits have been landed. Closing PR #24870 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug