Source/WebKit/Platform/cocoa/ExtensionCapabilityGrant.mm:40:25: error: instance method '-isValid' not found https://bugs.webkit.org/show_bug.cgi?id=269839 rdar://123369227

Unreviewed compilation failure fix

Change platformInvalidate prototype definition.

* Source/WebKit/Platform/cocoa/ExtensionCapabilityGrant.mm:
(WebKit::platformInvalidate):

Canonical link: https://commits.webkit.org/275092@main